--- a/about.html
+++ b/about.html
@@ -455,7 +455,7 @@ $(document).ready(function(){
 				</ul>
 			</div>
 			<div class="agileinfo">
-				<p>© 2017 Fashion Blog . All Rights Reserved . Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+				<p>© Design by Aachibabu </p>
 			</div>
 		</div>
 	</div>
