--- a/photography.html
+++ b/photography.html
@@ -1,13 +1,7 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Fashion Blog a Blogging Category Bootstrap Responsive Website Template | Photography :: w3layouts</title>    
+<title>Fashion Blog</title>    
 <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" /><!-- fontawesome -->     
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" /><!-- Bootstrap stylesheet -->
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
@@ -430,7 +424,7 @@ $(document).ready(function(){
 				</ul>
 			</div>
 			<div class="agileinfo">
-				<p>© 2017 Fashion Blog . All Rights Reserved . Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+				<p>© Design by Aachibabu </p>
 			</div>
 		</div>
 	</div>
